<resources>
    <string name="app_name">kursproj</string>
    <string name="mainPicture">Picture in the main screen</string>
    <string name="logoOfApp">OurNotes</string>
    <string name="logoOfNote">Заметки</string>
    <string name="dailyMain">Ежедневник</string>
    <string name="info">Информация</string>
    <string name="notesMain">Заметки</string>
    <string name="gradientBottomMain">Notes button in the main screen</string>
    <string name="gradientTopMain">Notes button in the main screen</string>
    <string name="rectangle">Rectangle on the top</string>
    <string name="title_activity_allnotes">allnotes</string>
    <string name="today">Сегодня</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="title">Title</string>

    <string name="inf1">Наше приложение OurNotes было создано для курсового проекта в Московском Политехе, а также для конкурса "Твой Ход"</string>
    <string name="inf2">Над приложением работали Тельнова Елизавета Эдуардовна и Кочеткова Татьяна Александровна</string>
    <string name="inf3">*Приложение со временем будет совершенствоваться</string>
    <string name="inf4">Московский Политех</string>
    <string name="inf5">2023 год</string>

    <string-array name="types">
        <item>Сегодня</item>
        <item>Неделя</item>
        <item>Месяц</item>
    </string-array>

</resources>